--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
   <div class="paper-list">
 
     <div class="paper-card">
-      <div class="paper-title">Optimizing Neural Network Efficiency with Hybrid Architectures</div>
+      <div class="paper-title">Precision Agriculture using Rechargeable Harvest Batteries and Wireless Sensor Nodes (2025)</div>
       <div class="paper-meta">
-        Soham Kulkarni, Jane Doe<br>
-        Presented at: International Conference on AI Research, 2024
+        Soham Kulkarni<br>
+       Abstract
+In the face of rising global food insecurity and the increasing need for sustainable agricultural practices, this research explores the integration of wireless sensor networks (WSNs), renewable energy, and rechargeable battery systems in precision agriculture. Combining simulations in MATLAB and real-world sensor deployments using Raspberry Pi, the project focuses on smart irrigation, energy harvesting strategies, and efficient wireless communication using technologies like LoRaWAN. It also models environmental effects like log-normal shadowing and applies Markov models to assess sensor node behavior. This work contributes toward scalable, sustainable, and data-driven agriculture solutions for the future.
+
+
       </div>
       <a class="pdf-link" href="Precision_Agriculture_Paper.pdf" target="_blank">📄 View PDF</a>
     </div>
