--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="paper-title">Precision Agriculture using Rechargeable Harvest Batteries and Wireless Sensor Nodes (2025)</div>
       <div class="paper-meta">
         Soham Kulkarni<br>
-       Abstract
+       Abstract <br>
 In the face of rising global food insecurity and the increasing need for sustainable agricultural practices, this research explores the integration of wireless sensor networks (WSNs), renewable energy, and rechargeable battery systems in precision agriculture. Combining simulations in MATLAB and real-world sensor deployments using Raspberry Pi, the project focuses on smart irrigation, energy harvesting strategies, and efficient wireless communication using technologies like LoRaWAN. It also models environmental effects like log-normal shadowing and applies Markov models to assess sensor node behavior. This work contributes toward scalable, sustainable, and data-driven agriculture solutions for the future.
 
 
