--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </div>
     </div>
 
-    <a class="pdf-button" href="PrecisionAgriculture.pdf" target="_blank">📥 Download Full Paper (PDF)</a>
+    <a class="pdf-button" href="Precision_Agriculture_Paper.pdf" target="_blank">📥 Download Full Paper (PDF)</a>
   </div>
 
   <script>
