--- a/index.html
+++ b/index.html
@@ -54,31 +54,10 @@
     .paper-meta {
       font-size: 1rem;
       color: #475569;
-      margin-bottom: 1rem;
-    }
-
-    .abstract-section {
-      margin-top: 1.5rem;
-    }
-
-    .abstract-toggle {
-      background-color: #3b82f6;
-      color: #fff;
-      border: none;
-      padding: 0.6rem 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 1rem;
-      margin-bottom: 1rem;
-      transition: background-color 0.3s ease;
-    }
-
-    .abstract-toggle:hover {
-      background-color: #2563eb;
+      margin-bottom: 1.5rem;
     }
 
     .abstract-content {
-      display: none;
       font-size: 1rem;
       line-height: 1.6;
       color: #1e293b;
@@ -86,11 +65,11 @@
       padding: 1rem;
       border-left: 4px solid #3b82f6;
       border-radius: 8px;
+      margin-bottom: 1.5rem;
     }
 
     .pdf-button {
       display: inline-block;
-      margin-top: 1.5rem;
       padding: 0.75rem 1.25rem;
       background: #1d4ed8;
       color: white;
@@ -108,7 +87,7 @@
       .paper-title {
         font-size: 1.5rem;
       }
-      .abstract-toggle, .pdf-button {
+      .pdf-button {
         width: 100%;
         text-align: center;
       }
@@ -126,29 +105,13 @@
       <strong>Published in:</strong> Independent Research, 2025
     </div>
 
-    <div class="abstract-section">
-      <button class="abstract-toggle" onclick="toggleAbstract()">📄 Show Abstract</button>
-      <div class="abstract-content" id="abstract">
-        In the face of rising global food insecurity and the increasing need for sustainable agricultural practices, this research explores the integration of wireless sensor networks (WSNs), renewable energy, and rechargeable battery systems in precision agriculture. Combining simulations in MATLAB and real-world sensor deployments using Raspberry Pi, the project focuses on smart irrigation, energy harvesting strategies, and efficient wireless communication using technologies like LoRaWAN. It also models environmental effects like log-normal shadowing and applies Markov models to assess sensor node behavior. This work contributes toward scalable, sustainable, and data-driven agriculture solutions for the future.
-      </div>
+    <div class="abstract-content">
+      <strong>Abstract:</strong><br>
+      In the face of rising global food insecurity and the increasing need for sustainable agricultural practices, this research explores the integration of wireless sensor networks (WSNs), renewable energy, and rechargeable battery systems in precision agriculture. Combining simulations in MATLAB and real-world sensor deployments using Raspberry Pi, the project focuses on smart irrigation, energy harvesting strategies, and efficient wireless communication using technologies like LoRaWAN. It also models environmental effects like log-normal shadowing and applies Markov models to assess sensor node behavior. This work contributes toward scalable, sustainable, and data-driven agriculture solutions for the future.
     </div>
 
-    <a class="pdf-button" href="Precision_Agriculture_Paper.pdf" target="_blank">📥 Download Full Paper (PDF)</a>
+    <a class="pdf-button" href="PrecisionAgriculture.pdf" target="_blank">📥 Download Full Paper (PDF)</a>
   </div>
-
-  <script>
-    function toggleAbstract() {
-      const abs = document.getElementById('abstract');
-      const btn = document.querySelector('.abstract-toggle');
-      if (abs.style.display === 'block') {
-        abs.style.display = 'none';
-        btn.textContent = '📄 Show Abstract';
-      } else {
-        abs.style.display = 'block';
-        btn.textContent = '📄 Hide Abstract';
-      }
-    }
-  </script>
 
 </body>
 </html>
